--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hexlet/code",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "[![Actions Status](https://github.com/cofeinum/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/cofeinum/frontend-project-44/actions)",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,8 @@
   "type": "module",
   "bin": {
     "brain-games": "bin/brain-games.js"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
