--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "brain-games": "bin/brain-games.js"
   },
   "dependencies": {
+    "eslint-plugin-jest": "^27.2.1",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
